@@ -3,6 +3,10 @@ Soon...
 * Dynamic fields (add new fields to existing mmstats instances)
 * 1 Writer field => Multiple exposed metrics (think moving avg + std dev)
 
+next
+
+* [API CHANGE] - MovingAverageField's kwarg changed from window_size => size
+
 Version 0.5.0 "100% More Average" released 2012-02-25
 
 * [API CHANGE] - RunningAverage field is now AverageField
